removed useless operators